--- a/index.html
+++ b/index.html
@@ -11,5 +11,15 @@
     <video autoplay muted play>
       <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
+    <h2>Your personal travel guide</h2>
+    <p1>Excursion remembers places you like, and recommends new points of interest around you.</p1>
+    <p><img src="resources/images/camp.jpg" alt=""></p>
+    <p><img class="app" src="resources/images/phone.jpg" alt=""></p>
+    <h2>Coming soon for iPhone and Android</h2>
+    <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+
+    <div class="footer">
+      <p>&copy; Excursion</p>
+    </div>
   </body>
 </html>
